--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,9 @@
 name: Publish Version
 
-on: workflow_dispatch
+on:
+  push:
+    tags:
+      - '*'
 
 jobs:
   build-linux-windows:
@@ -93,6 +96,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: artifacts/*/UDTool-*
+          tag_name: ${{ github.ref_name }}
           draft: false
           prerelease: false
         env:
