--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "UDTool"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2024"
+authors = ["Ari Cummings <ari@aricummings.com>"]
+
+
 
 [dependencies]
 reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
