--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ authors = ["Ari Cummings <ari@aricummings.com>"]
 [dependencies]
 dirs = "6.0.0"
 reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
+serde_json = "1.0"
