--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Publish Version
+name: Release Build
 
 permissions:
   contents: write
@@ -6,102 +6,276 @@ permissions:
 on:
   push:
     tags:
-      - '*'
+      - 'v*'
 
 jobs:
-  build-linux-windows:
-    name: Build for ${{ matrix.target }}
+  # Build Linux binaries and packages
+  build-linux:
+    name: Build Linux - ${{ matrix.arch }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
         include:
-          - target: x86_64-unknown-linux-gnu
-            output: UDTool-linux-x86_64
-          
-          - target: aarch64-unknown-linux-gnu
-            output: UDTool-linux-aarch64
-          
-          - target: x86_64-pc-windows-gnu
-            output: UDTool-windows-x86_64.exe
+          - arch: x64
+            target: x86_64-unknown-linux-gnu
+            triplet: x86_64
+          - arch: arm64
+            target: aarch64-unknown-linux-gnu
+            triplet: aarch64
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Install Rust
-      uses: dtolnay/rust-toolchain@stable
+      - uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: ${{ matrix.target }}
 
-    - name: Install cross
-      run: cargo install cross --git https://github.com/cross-rs/cross
+      - name: Install cross
+        run: cargo install cross --git https://github.com/cross-rs/cross
 
-    - name: Build with cross
-      run: cross build --release --target ${{ matrix.target }}
+      - name: Build binary
+        run: cross build --release --target ${{ matrix.target }}
 
-    - name: Rename binary
-      run: |
-        if [[ "${{ matrix.target }}" == *"windows"* ]]; then
-          mv target/${{ matrix.target }}/release/UDTool.exe ${{ matrix.output }}
-        else
-          mv target/${{ matrix.target }}/release/UDTool ${{ matrix.output }}
-        fi
+      - name: Copy binary
+        run: |
+          mkdir -p release
+          cp target/${{ matrix.target }}/release/UDTool release/UDTool-linux-${{ matrix.arch }}
 
-    - name: Upload artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: ${{ matrix.output }}
-        path: ${{ matrix.output }}
+      - name: Install build tools for DEB/RPM
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y cargo-deb cargo-rpm
 
+      - name: Update Cargo.toml with architecture
+        run: |
+          sed -i 's/^\(name = "UDTool"\)/\1\n[package]\nmetadata.deb.assets = [[]]/' Cargo.toml
+
+      - name: Build DEB package
+        run: |
+          cross build --release --target ${{ matrix.target }}
+          # Manual DEB creation since cargo-deb may not work with cross
+          mkdir -p deb/DEBIAN deb/usr/local/bin
+          cp target/${{ matrix.target }}/release/UDTool deb/usr/local/bin/
+          echo "Package: udtool
+Version: ${GITHUB_REF#refs/tags/v}
+Architecture: ${{ matrix.arch }}
+Maintainer: Ari Cummings <ari@aricummings.com>
+Description: Universal Data Tool - Manage files on remote server" > deb/DEBIAN/control
+          dpkg-deb --build deb release/UDTool-linux-${{ matrix.arch }}.deb
+
+      - name: Build RPM package
+        run: |
+          mkdir -p ~/rpmbuild/{BUILD,RPMS,SOURCES,SPECS,SRPMS}
+          mkdir -p rpmroot/usr/local/bin
+          cp target/${{ matrix.target }}/release/UDTool rpmroot/usr/local/bin/
+          cat > ~/rpmbuild/SPECS/udtool.spec << 'EOF'
+          Name: udtool
+          Version: ${GITHUB_REF#refs/tags/v}
+          Release: 1
+          Summary: Universal Data Tool
+          License: MIT
+          
+          %description
+          Manage files on remote server with API key authentication
+          
+          %prep
+          
+          %build
+          
+          %install
+          mkdir -p %{buildroot}/usr/local/bin
+          cp -r %{_sourcedir}/* %{buildroot}/
+          
+          %files
+          /usr/local/bin/UDTool
+          EOF
+          cp target/${{ matrix.target }}/release/UDTool ~/rpmbuild/SOURCES/
+          rpmbuild -bb ~/rpmbuild/SPECS/udtool.spec --define "_rpmdir $(pwd)/release"
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: linux-${{ matrix.arch }}
+          path: release/*
+
+  # Build macOS binaries and PKG installers
   build-macos:
-    name: Build for ${{ matrix.target }}
+    name: Build macOS
     runs-on: macos-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: x86_64-apple-darwin,aarch64-apple-darwin
+
+      - name: Build x64 binary
+        run: cargo build --release --target x86_64-apple-darwin
+
+      - name: Build ARM64 binary
+        run: cargo build --release --target aarch64-apple-darwin
+
+      - name: Copy binaries
+        run: |
+          mkdir -p release
+          cp target/x86_64-apple-darwin/release/UDTool release/UDTool-macos-x64
+          cp target/aarch64-apple-darwin/release/UDTool release/UDTool-macos-arm64
+
+      - name: Create universal binary
+        run: |
+          lipo -create \
+            target/x86_64-apple-darwin/release/UDTool \
+            target/aarch64-apple-darwin/release/UDTool \
+            -output release/UDTool-macos-universal
+
+      - name: Build PKG installer
+        run: |
+          VERSION=${GITHUB_REF#refs/tags/v}
+          STAGING_DIR="pkg_staging"
+          rm -rf "$STAGING_DIR"
+          mkdir -p "$STAGING_DIR/usr/local/bin"
+          
+          cp release/UDTool-macos-universal "$STAGING_DIR/usr/local/bin/UDTool"
+          chmod 755 "$STAGING_DIR/usr/local/bin/UDTool"
+          
+          SCRIPTS_DIR=$(mktemp -d)
+          cat > "$SCRIPTS_DIR/postinstall" << 'POSTINSTALL_EOF'
+          #!/bin/bash
+          echo "UDTool installed successfully to /usr/local/bin/UDTool"
+          POSTINSTALL_EOF
+          chmod +x "$SCRIPTS_DIR/postinstall"
+          
+          pkgbuild --root "$STAGING_DIR" \
+            --scripts "$SCRIPTS_DIR" \
+            --identifier "com.aricummings.udtool" \
+            --version "$VERSION" \
+            --install-location "/" \
+            "release/UDTool-${VERSION}.pkg"
+          
+          rm -rf "$STAGING_DIR" "$SCRIPTS_DIR"
+
+      - name: Generate checksums
+        run: |
+          cd release
+          sha256sum * > SHA256SUMS
+          cd ..
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: macos
+          path: release/*
+
+  # Build Windows executables and MSI installers
+  build-windows:
+    name: Build Windows - ${{ matrix.arch }}
+    runs-on: windows-latest
     strategy:
       matrix:
         include:
-          - target: x86_64-apple-darwin
-            output: UDTool-macos-x86_64
+          - arch: x64
+            target: x86_64-pc-windows-msvc
+          - arch: arm64
+            target: aarch64-pc-windows-msvc
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: ${{ matrix.target }}
+
+      - name: Build binary
+        run: cargo build --release --target ${{ matrix.target }}
+
+      - name: Copy binary
+        run: |
+          New-Item -ItemType Directory -Path release -Force
+          Copy-Item target/${{ matrix.target }}/release/UDTool.exe release/UDTool-windows-${{ matrix.arch }}.exe
+
+      - name: Build MSI installer (WiX)
+        run: |
+          # Install WiX Toolset
+          choco install wixtoolset -y
+          $env:PATH += ";C:\Program Files (x86)\WiX Toolset v3.11\bin"
           
-          - target: aarch64-apple-darwin
-            output: UDTool-macos-aarch64
+          # Build MSI
+          wix build wix\main.wxs `
+            -d Version=="${{ github.ref_name }} `
+            -d CargoTargetBinDir=target\${{ matrix.target }}\release `
+            -d PlatformArch=${{ matrix.arch }} `
+            -ext WixToolset.UI.wixext `
+            -o release\UDTool-${{ github.ref_name }}-${{ matrix.arch }}.msi
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: windows-${{ matrix.arch }}
+          path: release/*
 
-    - name: Install Rust
-      uses: dtolnay/rust-toolchain@stable
-      with:
-        targets: ${{ matrix.target }}
-
-    - name: Build
-      run: cargo build --release --target ${{ matrix.target }}
-
-    - name: Rename binary
-      run: mv target/${{ matrix.target }}/release/UDTool ${{ matrix.output }}
-
-    - name: Upload artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: ${{ matrix.output }}
-        path: ${{ matrix.output }}
-        
-  release:
+  # Create GitHub release with all artifacts
+  create-release:
     name: Create Release
-    needs: [build-linux-windows, build-macos]
+    needs: [build-linux, build-macos, build-windows]
     runs-on: ubuntu-latest
-    
+
     steps:
+      - uses: actions/checkout@v4
+
       - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
-          path: artifacts
-        
-      - name: Create Release
+          path: all-artifacts
+
+      - name: Organize artifacts
+        run: |
+          mkdir -p release-files
+          find all-artifacts -type f ! -name ".*" -exec cp {} release-files/ \;
+          cd release-files
+          ls -lah
+
+      - name: Generate checksums for all files
+        run: |
+          cd release-files
+          sha256sum * > SHA256SUMS.txt
+          cat SHA256SUMS.txt
+
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
-          files: artifacts/*/UDTool-*
+          files: release-files/*
           tag_name: ${{ github.ref_name }}
           draft: false
           prerelease: false
+          body: |
+            # UDTool ${{ github.ref_name }}
+            
+            ## Downloads
+            
+            ### Linux
+            - **Executables**: UDTool-linux-x64, UDTool-linux-arm64
+            - **Debian packages**: UDTool-linux-x64.deb, UDTool-linux-arm64.deb
+            - **RPM packages**: UDTool-linux-x64.rpm, UDTool-linux-arm64.rpm
+            
+            ### macOS
+            - **Executables**: UDTool-macos-x64, UDTool-macos-arm64, UDTool-macos-universal
+            - **Installer**: UDTool-${{ github.ref_name }}.pkg
+            
+            ### Windows
+            - **Executables**: UDTool-windows-x64.exe, UDTool-windows-arm64.exe
+            - **Installers**: UDTool-${{ github.ref_name }}-x64.msi, UDTool-${{ github.ref_name }}-arm64.msi
+            
+            ## Installation
+            
+            **Windows**: Download the .msi file and run
+            **macOS**: Download the .pkg file and run
+            **Linux**: Download the executable or DEB/RPM package
+            
+            ## Verify Downloads
+            ```bash
+            sha256sum -c SHA256SUMS.txt
+            ```
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   
