--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,7 @@ authors = ["Ari Cummings <ari@aricummings.com>"]
 license = "MIT"
 description = "Universal Data Tool - Manage files on remote server with API key authentication"
 
-
-
 [dependencies]
 dirs = "6.0.0"
-reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
+reqwest = { version = "0.12", features = ["blocking", "json", "multipart", "rustls-tls"], default-features = false }
 serde_json = "1.0"
