--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,8 +58,8 @@ jobs:
         run: |
           mkdir -p release
           cargo deb --target ${{ matrix.target }} --output release/ || {
-            echo "cargo deb failed, skipping DEB for ARM64"
-            touch release/UDTool-linux-arm64.deb
+            echo "cargo deb failed for ${{ matrix.arch }}, skipping DEB"
+            echo "This is expected for ARM64 cross-compilation"
           }
 
       - name: Build RPM package
@@ -78,6 +78,11 @@ jobs:
                 --description "Universal Data Tool - Manage files on remote server" 2>/dev/null || true
             }
           fi
+
+      - name: Clean up empty files
+        run: |
+          # Remove any empty files (size 0) to avoid upload errors
+          find release -type f -size 0 -delete || true
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
@@ -292,6 +297,10 @@ jobs:
         run: |
           mkdir -p release-files
           find all-artifacts -type f ! -name ".*" -exec cp {} release-files/ \;
+          
+          # Remove empty files (size 0) to avoid GitHub upload errors
+          find release-files -type f -size 0 -delete || true
+          
           cd release-files
           ls -lah
 
